<resources>
    <string name="app_name">FUTM Chatbot</string>

    <string name="description_logo">FUTM Chatbot Logo</string>
    <string name="prompt_phone_verification_guide">Please provide your current phone number to start using this chatbot. A code will be sent to you via SMS.</string>
    <string name="hint_phone">11 Digit Phone Number</string>
    <string name="action_help">Help</string>
    <string name="description_phone_number">Phone Number Image</string>
    <string name="description_code">SMS Code Verification Image</string>
    <string name="prompt_code_verification_guide">Enter the 5 Digit Code Sent to you</string>
    <string name="hint_code">5 Digit Code</string>
    <string name="error_invalid_phone">Invalid Phone Number (11 Digits Required)</string>
    <string name="error_network_failure">Network Failure !!!</string>
    <string name="prompt_verify">Verify</string>
    <string name="prompt_start">Start</string>
    <string name="prompt_resend">Resend</string>
    <string name="prompt_change">Change</string>
    <string name="prompt_phone_verification">Verify Phone Number</string>
    <string name="format_timer">%dm %ds</string>
    <string name="error_invalid_code">Invalid Code (5 digits Required)</string>
    <string name="prompt_phone">Phone</string>
    <string name="prompt_code">Code</string>
    <string name="error_wrong_code">Wrong Code Provided</string>
    <string name="hint_message">Ask Question</string>
    <string name="action_settings">Settings</string>
    <string name="description_send_button">Send Button</string>
    <string name="prompt_fut_bot">FUTM Bot</string>
    <string name="description_message_status">Message Status Icon</string>
    <string name="channel_chatbot_messages_id">com.fut.chatbot.messages</string>
    <string name="service_description_messaging">Receives Real-Time messages from FUTM Chatbot</string>
    <string name="description_back_button_arrow_image">Back Button Arrow Image</string>
    <string name="action_delete">Delete</string>
    <string name="title_activity_settings">Settings</string>
    <string name="preference_key_display_name">display_name</string>
    <string name="preference_key_tts_enabled">tts_enabled</string>
    <string name="preference_key_tts_settings">tts_settings</string>
    <string name="error_message_version">The current version of this application cannot view this message. Please update to view.</string>
    <string name="prompt_today">Today</string>
    <string name="prompt_yesterday">Yesterday</string>
    <string name="description_contributor_image">Contributor Image</string>
    <string name="description_extra_image">Answer Extra Image View</string>
    <string name="description_selected_image">Selected Image</string>
    <string name="description_extra_image_button">Extra Image Button</string>
    <string name="description_speech_button">Speech to text image button</string>
    <string name="prompt_make_speech">Say your question !!!</string>
    <plurals name="format_selection_count">
        <item quantity="one">%d item selected</item>
        <item quantity="other">%d items selected</item>
    </plurals>
</resources>
