<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/colorWhite"
    android:padding="16dp"
    tools:context=".fragment.PhoneVerificationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@color/colorWhite"
        tools:context=".fragment.CodeVerificationFragment">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="136dp"
            android:layout_marginBottom="32dp"
            android:src="@drawable/phone_verification"
            android:contentDescription="@string/description_phone_number" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textSize="14sp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:fontFamily="serif-monospace"
            android:text="@string/prompt_phone_verification_guide"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/edt_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:hint="@string/hint_phone"
            android:padding="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:inputType="phone"
            android:maxLength="11"
            android:gravity="center"
            android:textColor="@color/colorBlack"
            android:fontFamily="casual"
            android:layout_marginBottom="16dp"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/btn_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:padding="4dp"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@color/colorPrimary"
            android:text="@string/prompt_start"/>

    </LinearLayout>

</ScrollView>