<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="@layout/activity_chatbot">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_chats"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_solid_curve_ash"
        android:layout_margin="4dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_speech"
            android:layout_gravity="bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorTransparent"
            android:src="@drawable/ic_mic"
            android:contentDescription="@string/description_speech_button" />

        <EditText
            android:id="@+id/edt_ask_text"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:hint="@string/hint_message"
            android:background="@drawable/transparent"
            android:importantForAutofill="no"
            android:inputType="textMultiLine" />

        <ImageButton
            android:id="@+id/btn_send"
            android:layout_gravity="bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorTransparent"
            android:src="@drawable/ic_send"
            android:contentDescription="@string/description_send_button" />

    </LinearLayout>

</LinearLayout>