<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorTransparent"
    android:paddingTop="10dp"
    android:paddingBottom="0dp"
    android:paddingStart="15dp"
    android:paddingEnd="60dp"
    android:layout_margin="1dp"
    android:clipToPadding="false">

    <View
        android:id="@+id/img_bot"
        android:layout_alignParentStart="true"
        android:scaleType="centerInside"
        android:background="@drawable/fut_chatbot"
        android:layout_width="30dp"
        android:layout_height="30dp" />

    <TextView
        android:id="@+id/txt_bot_name"
        android:textColor="@color/colorBlack"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@+id/img_bot"
        android:layout_alignTop="@+id/img_bot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp"
        android:text="@string/prompt_fut_bot"/>

    <TextView
        android:id="@+id/txt_message_time"
        android:layout_marginStart="8dp"
        android:layout_below="@id/txt_message_body"
        android:layout_alignEnd="@id/txt_message_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@color/colorAsh"
        android:paddingBottom="4dp"
        tools:text="12:45"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_img"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_below="@+id/txt_bot_name"
        android:layout_toEndOf="@+id/img_bot"
        android:background="@color/colorLightAsh"
        android:layout_marginBottom="4dp"
        android:elevation="1dp"
        app:cardCornerRadius="20dp">

        <ImageView
            android:src="@drawable/splash"
            android:id="@+id/img_extra"
            android:layout_margin="8dp"
            android:background="@drawable/transparent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/description_extra_image"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txt_message_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card_img"
        android:layout_toEndOf="@+id/img_bot"
        android:background="@drawable/text_purple_background"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:textColor="@color/colorWhite"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:elevation="2dp"
        android:textSize="18sp"
        android:minWidth="100dp"
        tools:text="How are you doing? This is a long message that should probably wrap."
        />

    <ImageButton
        android:id="@+id/img_btn_extra_1"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/transparent"
        android:scaleType="fitStart"
        android:elevation="3dp"
        android:layout_marginTop="4dp"
        android:layout_below="@id/txt_message_body"
        android:layout_toEndOf="@+id/img_bot"
        tools:src="@drawable/whatsapp"
        android:contentDescription="@string/description_extra_image_button" />

    <ImageButton
        android:id="@+id/img_btn_extra_2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/transparent"
        android:scaleType="fitStart"
        android:elevation="3dp"
        android:layout_marginTop="4dp"
        android:layout_below="@id/txt_message_body"
        android:layout_toEndOf="@+id/img_btn_extra_1"
        tools:src="@drawable/location"
        android:contentDescription="@string/description_extra_image_button" />

</RelativeLayout>